force-app/main/default/objects/TTGS_Strain__c/TTGS_Strain__c.object-meta.xml
<CustomObject>
    <label>TTGS Strain</label>
    <nameField>
        <displayFormat>TTGSS-{MMYY}-{000000}</displayFormat>
        <label>TTGS Strain</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TTGS Strains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>