force-app/main/default/objects/TTGS_Strain__c/fields/CBD_Level__c.field-meta.xml
<CustomField>
    <fullName>CBD_Level__c</fullName>
    <label>CBD Level</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>