force-app/main/default/objects/TTGS_Strain__c/fields/Indica_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Indica_Percentage__c</fullName>
    <label>Indica Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>