force-app/main/default/objects/TTGS_Strain__c/fields/Sativa_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Sativa_Percentage__c</fullName>
    <label>Sativa Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>