force-app/main/default/objects/TTGS_Strain__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>TTGS Strains</relationshipLabel>
    <relationshipName>TTGS_Strains</relationshipName>
    <type>Lookup</type>
</CustomField>