force-app/main/default/objects/TTGS_Strain__c/fields/Strain__c.field-meta.xml
<CustomField>
    <fullName>Strain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strain</label>
    <referenceTo>Strain__c</referenceTo>
    <relationshipLabel>TTGS Strains</relationshipLabel>
    <relationshipName>TTGS_Strains</relationshipName>
    <type>Lookup</type>
</CustomField>