force-app/main/default/objects/TTGS_Strain__c/fields/Testing_Status__c.field-meta.xml
<CustomField>
    <fullName>Testing_Status__c</fullName>
    <label>Testing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>InHouse</fullName>
            </value>
            <value>
                <fullName>ThirdParty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>