force-app/main/default/objects/TTGS_Strain__c/fields/TTGS_StrainID__c.field-meta.xml
<CustomField>
    <fullName>TTGS_StrainID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>TT Unique Item ID and Site Specific</inlineHelpText>
    <label>TTGS StrainID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>